# k-regret

./: .gitignore  README.md
k-regret-cpp/: main.cpp
k-regret-cpp-tool/: CMakeLists.txt  README.md  main.cpp
k-regret-cpp-tool/include/: cube.h  point.h
k-regret-cpp-tool/include/kregret/: cube.h  data_reader.h  kregret_result.h  point.h
k-regret-cpp-tool/src/: cube.cpp  data_reader.cpp  kregret_result.cpp  point.cpp
k-regret-cpp-tool/test_data/: nba.csv  stock.csv
k-regret-cpp/src/: cube.cpp  point.cpp
